[package]
authors = ["Nikita Skobov"]
name = "vidclipper-server"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "vidclipper-server"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
actix-web = "3.2.0"
futures = "0.3.7"
futures-timer = "3.0.2"
tokio = { version = "0.2.23", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
actix-cors = "0.5.3"
actix-files = "0.4.1"
rand = "0.7.3"
progresslib2-server-extension = { git = "https://github.com/nikita-skobov/progresslib2-server-extension" }
progresslib2 = { git = "https://github.com/nikita-skobov/progresslib2" }
